...
    @ObservedObject var store: App2VMStore
    @ObservedObject var restoreStore: App2RestoreImageStore
    @Environment(\.openWindow) private var openWindow

    var body: some Commands {
        CommandGroup(replacing: .appSettings) {
            Button("Settings…") {
                openWindow(id: "settings")
            }
            .keyboardShortcut(",", modifiers: [.command])
        }

        CommandGroup(after: .windowList) {
...
